Fix multipart enctype and request update.